Modificaciones en Maestros y en la Gestion de Trabajo Social

--- a/WebContent/views/desktop/datos/parametros/cuentaBancaria/CuentaBancariaFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/cuentaBancaria/CuentaBancariaFormBasic.zul
@@ -5,47 +5,64 @@
 		viewModel="@id('vm') @init('ve.smile.datos.parametros.cuentabancaria.viewmodels.VM_CuentaBancariaFormBasic')">
 
 		<div class="row">
-		
+
 			<div class="input-field col s6">
 				<n:label for="tipo_reconocimiento">Banco</n:label>
-				<combobox id="fk_banco" readonly="true" model="@bind(vm.bancos)" selectedItem="@bind(vm.cuentaBancaria.fkBanco)">
+				<combobox id="fk_banco" readonly="true"
+					model="@bind(vm.bancos)"
+					selectedItem="@bind(vm.cuentaBancaria.fkBanco)">
 					<template name="model">
 						<comboitem label="@load(each.nombre)" />
 					</template>
 				</combobox>
 			</div>
-		
+
 			<div class="input-field col s6">
 				<n:label for="cuentaBancaria">Cuenta bancaria</n:label>
-				<textbox id="cuentaBancaria" type="text" maxlength="40" value="@bind(vm.cuentaBancaria.cuentaBancaria)"></textbox>
+				<textbox id="cuentaBancaria" type="text" maxlength="40"
+					value="@bind(vm.cuentaBancaria.cuentaBancaria)">
+				</textbox>
 			</div>
-			
+
 			<div class="input-field col s6">
 				<n:label for="titular">Titular de la cuenta</n:label>
-				<textbox id="titular" type="text" maxlength="150" value="@bind(vm.cuentaBancaria.titular)"></textbox>
+				<textbox id="titular" type="text" maxlength="150"
+					value="@bind(vm.cuentaBancaria.titular)">
+				</textbox>
 			</div>
-			
+
 			<div class="input-field col s6">
-				<n:label for="idtitular">Cédula o RIF</n:label>
-				<textbox id="idtitular" type="text" maxlength="35" value="@bind(vm.cuentaBancaria.identificacionTitular)"></textbox>
+				<n:label for="idtitular">Cédula/RIF</n:label>
+				<textbox id="idtitular" type="text" maxlength="35"
+					placeholder="V-1234567 J-123245-2 "
+					value="@bind(vm.cuentaBancaria.identificacionTitular)">
+				</textbox>
 			</div>
-			
+
 			<div class="input-field col s6">
-				<n:label for="correotitular">E-mail del titular</n:label>
-				<textbox id="correotitular" type="text" maxlength="100" value="@bind(vm.cuentaBancaria.correoTitular)"></textbox>
+				<n:label for="correotitular">
+					Correo Electrónico del titular
+				</n:label>
+				<textbox id="correotitular" type="text" maxlength="100"
+					value="@bind(vm.cuentaBancaria.correoTitular)">
+				</textbox>
 			</div>
 
 			<div class="input-field col s6">
 				<n:label for="tipo_cuenta">Tipo de cuenta</n:label>
-				<combobox id="fk_tipocuenta" readonly="true" model="@bind(vm.tipoCuentaEnums)" selectedItem="@bind(vm.tipoCuentaEnum)">
-					<template name="model">
-						<comboitem label="@load(each)" />
-					</template>
-				</combobox>
+				<textbox id="tipo_cuenta" type="text" maxlength="100"
+					value="@bind(vm.cuentaBancaria.tipoCuenta)">
+				</textbox>
 			</div>
 
+			<div class="input-field col s6">
+				<n:label for="propietario">Tipo de cuenta</n:label>
+				<textbox id="propietario" type="text" maxlength="100"
+					disabled="true" value="@bind(vm.propietarioEnum)">
+				</textbox>
+			</div>
 		</div>
-		
+
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
