--- a/WebContent/views/desktop/datos/parametros/patrocinador/PatrocinadorFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/patrocinador/PatrocinadorFormBasic.zul
@@ -27,7 +27,7 @@
 								</n:label>
 
 								<combobox id="tipo_persona"
-									readonly="true" model="@bind(vm.tipoPersonaEnums)"
+									model="@bind(vm.tipoPersonaEnums)"
 									selectedItem="@bind(vm.tipoPersonaEnum)">
 									<template name="model">
 										<comboitem label="@load(each)" />
@@ -82,7 +82,7 @@
 									<span
 										sclass="fa fa-question-circle fa-lg help-icon-special"
 										tooltip="pop_sexo, position=after_end" />
-									<combobox id="sexo" readonly="true"
+									<combobox id="sexo"
 										model="@bind(vm.sexoEnums)"
 										selectedItem="@bind(vm.sexoEnum)">
 										<template name="model"
@@ -101,9 +101,8 @@
 									<span
 										sclass="fa fa-question-circle fa-lg help-icon-special"
 										tooltip="pop_fecha_nacimiento, position=after_end" />
-									<datebox id="db" cols="20"
-										readonly="true" format="dd/MM/yyyy"
-										value="@bind(vm.fechaNacimiento)" />
+									<datebox id="db" cols="20" constraint="no empty, no future"
+										format="dd/MM/yyyy" value="@bind(vm.fechaNacimiento)" />
 								</div>
 							</div>
 
@@ -143,7 +142,7 @@
 								<span
 									sclass="fa fa-question-circle fa-lg help-icon-special"
 									tooltip="pop_estado, position=after_end" />
-								<combobox id="fk_estado" readonly="true"
+								<combobox id="fk_estado"
 									placeholder="Seleccione un Estado" instant="true"
 									onSelect="@command('changeEstado')" model="@bind(vm.estados)"
 									selectedItem="@bind(vm.estado)">
@@ -162,7 +161,7 @@
 								<span
 									sclass="fa fa-question-circle fa-lg help-icon-special"
 									tooltip="pop_ciudad, position=after_end" />
-								<combobox id="fk_ciudad" readonly="true"
+								<combobox id="fk_ciudad"
 									placeholder="Seleccione una ciudad"
 									disabled="@load(empty vm.ciudades)" model="@bind(vm.ciudades)"
 									selectedItem="@bind(vm.persona
@@ -185,8 +184,7 @@
 										sclass="fa fa-question-circle fa-lg help-icon-special"
 										tooltip="pop_fecha_ingreso, position=after_end" />
 									<datebox id="fecha_ingreso"
-										cols="20" format="dd/MM/yyyy" readonly="true"
-										value="@bind(vm.fechaIngreso)" />
+										cols="20" format="dd/MM/yyyy" value="@bind(vm.fechaIngreso)" />
 								</div>
 
 								<div class="input-field col s12">
@@ -258,6 +256,7 @@
 									sclass="fa fa-question-circle fa-lg help-icon-special"
 									tooltip="pop_correo, position=after_end" />
 								<textbox id="correo" type="text"
+									constraint="/.+@.+\.[a-zA-Z]+/:Debe ingresar un correo válido"
 									value="@bind(vm.persona.correo)">
 								</textbox>
 							</div>
@@ -334,9 +333,17 @@
 		<popup id="pop_persona" width="200px">
 			<html>
 
+
+
+
+				
 				<![CDATA[ Por favor, indique el tipo de persona del
 				patrocinador que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: Natural.</font> ]]>
+				
+				
+				
+				
 				
 				
         	</html>
@@ -345,26 +352,50 @@
 		<popup id="pop_identificacion" width="200px">
 			<html>
 
-				<![CDATA[ Por favor, indique la Cédula del
-				patrocinador que desea registrar.<br /><font
-				color="#3b85a1">Ejemplo: V-19302871.</font> ]]>
+
+
+
+				
+				<![CDATA[ Por favor, indique la Cédula del patrocinador
+				que desea registrar.<br /><font color="#3b85a1">Ejemplo:
+				V-19302871.</font> ]]>
+				
+				
+				
+				
 	</html>
 		</popup>
 
 		<popup id="pop_identificacion_rif" width="200px">
 			<html>
 
-				<![CDATA[ Por favor, indique el RIF del
-				patrocinador que desea registrar.<br /><font
-				color="#3b85a1">Ejemplo: J-19302871-8.</font> ]]>
+
+
+
+				
+				<![CDATA[ Por favor, indique el RIF del patrocinador que
+				desea registrar.<br /><font color="#3b85a1">Ejemplo:
+				J-19302871-8.</font> ]]>
+				
+				
+				
+				
 	</html>
 		</popup>
 		<popup id="pop_nombre" width="200px">
 			<html>
 
+
+
+
+				
 				<![CDATA[ Por favor, indique el nombre del patrocinador
 				que desea registrar.<br /><font color="#3b85a1">Ejemplo:
 				Christopher o Constructora S.A.</font> ]]>
+				
+				
+				
+				
 	
         	</html>
 		</popup>
@@ -372,9 +403,17 @@
 		<popup id="pop_apellido" width="200px">
 			<html>
 
+
+
+
+				
 				<![CDATA[ Por favor, indique el apellido del
 				patrocinador que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: Hemsworth.</font> ]]>
+				
+				
+				
+				
 
 				
         	</html>
@@ -383,9 +422,17 @@
 		<popup id="pop_sexo" width="200px">
 			<html>
 
+
+
+
+				
 				<![CDATA[ Por favor, indique el género del patrocinador
 				que desea registrar.<br /><font
 				color="#3b85a1">Ejemplos: Masculino.</font> ]]>
+				
+				
+				
+				
 
         	</html>
 		</popup>
@@ -393,20 +440,36 @@
 		<popup id="pop_fecha_nacimiento" width="200px">
 			<html>
 
+
+
+
+				
 				<![CDATA[ Por favor, indique la fecha de nacimiento del
 				patrocinador que desea registrar, usando el selector de
 				fechas.<br /> <font color="#3b85a1">Ejemplo:
 				11/08/1983.</font> ]]>
+				
+				
+				
+				
 
         	</html>
 		</popup>
 
 		<popup id="pop_estado" width="200px">
 			<html>
+
+
+
+
 				
 				<![CDATA[ Por favor, indique el estado donde reside el
 				patrocinador que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: Lara.</font> ]]>
+				
+				
+				
+				
 	
         	</html>
 		</popup>
@@ -414,9 +477,17 @@
 		<popup id="pop_ciudad" width="200px">
 			<html>
 
+
+
+
+				
 				<![CDATA[ Por favor, indique la ciudad donde reside el
 				patrocinador que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: Cabudare.</font> ]]>
+				
+				
+				
+				
 
         	</html>
 		</popup>
@@ -424,22 +495,38 @@
 		<popup id="pop_fecha_ingreso" width="200px">
 			<html>
 
+
+
+
+
 				
 				<![CDATA[ Por favor, indique la fecha de ingreso al
 				sistema del patrocinador que desea registrar, usando el
 				selector de fechas.<br /> <font color="#3b85a1">Ejemplo:
 				28/09/2016.</font> ]]>
 				
+				
+				
+				
+				
         	</html>
 		</popup>
 
 		<popup id="pop_direccion" width="200px">
 			<html>
+
+
+
+
 				
 				<![CDATA[ Por favor, indique la dirección donde reside
 				el patrocinador que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: Urb. Los Cerezos Casa
 				30.</font> ]]>
+				
+				
+				
+				
 
 				
         	</html>
@@ -448,9 +535,17 @@
 		<popup id="pop_imagen" width="200px">
 			<html>
 
+
+
+
+				
 				<![CDATA[ Por favor, usando el icono de 'agregar' de
 				color verde, anexe una imagen del patrocinador que desea
 				registrar.]]>
+				
+				
+				
+				
 	
     		</html>
 		</popup>
@@ -458,9 +553,17 @@
 		<popup id="pop_telefono1" width="200px">
 			<html>
 
+
+
+
+				
 				<![CDATA[ Por favor, indique el teléfono principal del
 				patrocinador que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: 04166556221.</font> ]]>
+				
+				
+				
+				
 				
     		</html>
 		</popup>
@@ -468,9 +571,17 @@
 		<popup id="pop_telefono2" width="200px">
 			<html>
 
+
+
+
+				
 				<![CDATA[ Por favor, indique un teléfono secundario del
 				patrocinador que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: 02516354816.</font> ]]>
+				
+				
+				
+				
 
     		</html>
 		</popup>
@@ -478,9 +589,17 @@
 		<popup id="pop_fax" width="200px">
 			<html>
 
+
+
+
+				
 				<![CDATA[ Por favor, indique el número de fax del
 				patrocinador que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: 02516354816.</font> ]]>
+				
+				
+				
+				
 
     		</html>
 		</popup>
@@ -488,10 +607,18 @@
 		<popup id="pop_correo" width="200px">
 			<html>
 
+
+
+
+
 				
 				<![CDATA[ Por favor, indique un correo electrónico del
 				patrocinador que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: 02516354816.</font> ]]>
+				
+				
+				
+				
 
     		</html>
 		</popup>
@@ -499,9 +626,17 @@
 		<popup id="pop_twitter" width="200px">
 			<html>
 
+
+
+
+				
 				<![CDATA[ Por favor, indique la cuenta del Twitter del
 				patrocinador que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: @Nombre.</font> ]]>
+				
+				
+				
+				
 
     		</html>
 		</popup>
@@ -509,9 +644,17 @@
 		<popup id="pop_instagram" width="200px">
 			<html>
 
+
+
+
+				
 				<![CDATA[ Por favor, indique la cuenta de Instagram del
 				patrocinador que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: NombreCuenta.</font> ]]>
+				
+				
+				
+				
 
     		</html>
 		</popup>
@@ -519,16 +662,24 @@
 		<popup id="pop_facebook" width="200px">
 			<html>
 
+
+
+
+				
 				<![CDATA[ Por favor, indique la cuenta de Facebook del
 				patrocinador que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: NombreCuenta.</font> ]]>
+				
+				
+				
+				
 
     		</html>
 		</popup>
 
 		<popup id="pop_linkedin" width="200px">
 			<html>
-
+				
 				<![CDATA[ Por favor, indique la cuenta de LinkedIn del
 				patrocinador que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: NombreCuenta.</font> ]]>
@@ -538,6 +689,7 @@
 
 		<popup id="pop_web" width="200px">
 			<html>
+				
 				<![CDATA[ Por favor, indique la dirección url del sitio
 				web del patrocinador que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: www.sitioweb.com.</font> ]]>
