--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/registro/registroCompletado.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/registro/registroCompletado.zul
@@ -1,6 +1,19 @@
-<?page title="" contentType="text/html;charset=UTF-8"?>
-<zk>
-<window title="" border="normal">
-New Content Here!
-</window>
+<zk xmlns:n="native" xmlns:w="client">
+	<div sclass="animated fadeInLeft">
+		<div class="row">
+			<div class="col s12" align="center"
+				style="margin-bottom: 15px;">
+				<div sclass="row">
+					<span sclass="fa fa-check-square-o "
+						style="font-size: 5em;color: #d2ec3f;">
+					</span>
+				</div>
+				<div sclass="row">
+					<label value="Registro Completado Exitosamente"
+						sclass="label-medium-500" style="font-size: 20px;">
+					</label>
+				</div>
+			</div>
+		</div>
+	</div>
 </zk>
