--- a/WebContent/views/desktop/gestion/voluntariado/clasificacion/listaClasificacion.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/clasificacion/listaClasificacion.zul
@@ -2,7 +2,7 @@
 	<div sclass="animated fadeInLeft">
 		<div class="row">
 			<div class="col s12" align="center" style="margin-bottom: 15px;">
-				<label value="Seleccione las fortalezas del voluntario" sclass="label-medium-500"></label>
+				<label value="Seleccione las clasificaciones del voluntario" sclass="label-medium-500"></label>
 			</div>
 		</div>
 		
@@ -11,13 +11,13 @@
 				<div class="col s12">
 					
 					<div sclass="col s5" style="padding:0px">
-						<listbox model="@load(vm.fortalezas)" emptyMessage="No hay fortalezas registradas" selectedItems="@bind(vm.fortalezasSeleccionadas)" multiple="true">
+						<listbox model="@load(vm.clasificaciones)" emptyMessage="No hay clasificaciones registradas" selectedItems="@bind(vm.clasificacionesSeleccionadas)" multiple="true">
 							<listhead sizable="true">
-								<listheader label="Fortalezas" />
+								<listheader label="Clasificaciones" />
 							</listhead>
 							<template name="model">
 								<listitem label="@load(each.nombre)">
-									<zscript> self.setDisabled(vm.disabledFortaleza(each)); </zscript>
+									<zscript> self.setDisabled(vm.disabledClasificaciones(each)); </zscript>
 								</listitem>
 							</template>
 						</listbox>
@@ -25,17 +25,17 @@
 					
 					<div sclass="col s1" align="center">
 						<div sclass="row">
-							<button sclass="button-conf" iconSclass="fa fa-angle-double-right" onClick="@command('agregarFortalezas')" />
+							<button sclass="button-conf" iconSclass="fa fa-angle-double-right" onClick="@command('agregarClasificacion')" />
 						</div>
 						<div sclass="row">
-							<button sclass="button-conf" iconSclass="fa fa-angle-double-left" onClick="@command('removerFortalezas')" />
+							<button sclass="button-conf" iconSclass="fa fa-angle-double-left" onClick="@command('removerClasificacion')" />
 						</div>
 					</div>
 
 					<div sclass="col s5" style="padding:0px">
-						<listbox model="@load(vm.voluntarioFortalezas)" emptyMessage="No hay fortalezas asociadas al voluntario" selectedItems="@bind(vm.voluntarioFortalezasSeleccionadas)" multiple="true">
+						<listbox emptyMessage="No hay clasificaciones asociadas al voluntario seleccionado" model="@bind(vm.voluntarioClasificaciones)" selectedItems="@bind(vm.voluntarioClasificacionesSeleccionadas)" multiple="true">
 							<listhead sizable="true">
-								<listheader label="Fortalezas del voluntario" />
+								<listheader label="Clasificaciones del voluntario" />
 							</listhead>
 							<template name="model">
 								<listitem label="@load(each.nombre)" />
