--- a/WebContent/views/desktop/gestion/voluntariado/egreso/datosVoluntario.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/egreso/datosVoluntario.zul
@@ -2,7 +2,7 @@
 	<div sclass="animated fadeInLeft">
 		<div class="row">
 			<div class="col s12" align="center" style="margin-bottom: 15px;">
-				<label value="Datos del postulado" sclass="label-medium-500"></label>
+				<label value="Datos del voluntario" sclass="label-medium-500"></label>
 			</div>
 		</div>
 		
@@ -41,7 +41,7 @@
 					
 					<div class="input-field col s6">
 						<n:label for="sexo" class="active">Sexo</n:label>
-						<combobox id="sexo" readonly="true" disabled="true" model="@bind(vm.sexoEnums)">
+						<combobox id="sexo" readonly="true" disabled="true" model="@bind(vm.sexoEnums)" selectedItem="@bind(vm.selectedObject.fkPersona.sexo)">
 							<template name="model">
 								<comboitem label="@load(each)" />
 							</template>
