--- a/WebContent/views/desktop/gestion/evento/planificacion/tareas/asignacion/catalogoDirectorio.zul
+++ b/WebContent/views/desktop/gestion/evento/planificacion/tareas/asignacion/catalogoDirectorio.zul
@@ -3,7 +3,7 @@
 	<window width="80%" sclass="window-dialog" action="show: slideIn;hide: slideOut"
 		use="karen.core.dialog.catalogue.list_pagination.controllers.C_ListPaginationCatalogueDialog"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.gestion.trabajo_social.planificacion.viewmodels.VM_CatalogoDirectorio', dialogData=arg.get('dialogData'))">
+		viewModel="@id('vm') @init('ve.smile.gestion.evento.planificaion.tarea.asignacion.viewmodels.VM_CatalogoDirectorio', dialogData=arg.get('dialogData'))">
 		<caption label="DIRECTORIO" style="margin-left: 40%;"/>
 		<separator height="20px"></separator>
 		<n:h6 style="margin-left: 5%;">Por favor seleccione una dirección:</n:h6>
