--- a/WebContent/views/desktop/gestion/evento/planificacion/indicadores/editIndicadoresEventoPlanificado.zul
+++ b/WebContent/views/desktop/gestion/evento/planificacion/indicadores/editIndicadoresEventoPlanificado.zul
@@ -16,7 +16,7 @@
 
 				<listbox height="300px"
 					emptyMessage="No hay indicadores asociados al evento."
-					model="@bind(vm.indicadorTsPlans)">
+					model="@bind(vm.indicadorEventoPlanificado)">
 					<listhead sizable="true">
 						<listheader label="Indicador"  />
 						<listheader label="Unidad de Medida" />
