detalle en boton comentar

--- a/WebContent/assets/css/web/album.css
+++ b/WebContent/assets/css/web/album.css
@@ -113,8 +113,7 @@ button {
 
 .comentarios button {
 	float: right;
-	margin: 0 1rem;
-	margin-top: 18px;
+	margin: 18px 1rem;	
 }
 
 /* estilos para el modal */
